[project]
name = "prefect-toml-error"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["prefect>=3.4.6"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    { include-group = "typing" },
    { include-group = "test" },
]
typing = ["mypy>=1.16.0"]
test = ["pytest>=8.4.0"]
